# prm-back

./: .env  .gitignore  pyproject.toml
src/: const.py  main.py
src/models/: model_patient.py
src/routers/v1/: router_patient.py
src/services/: service_patient.py
